fix alignment issue and js for navbar on smalls screens

--- a/index.css
+++ b/index.css
@@ -1,265 +1,263 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap");
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-html, body {
-    margin: 0;
-    padding: 0;
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background: #3b4acd;
-    color: #A5B2D3;
-    padding: .5em;
-    font-family: serif;
-    height: 100vh;
-    text-align:center;
+  background: #3b4acd;
+  color: #a5b2d3;
+  padding: 0.5em;
+  font-family: serif;
+  height: 100vh;
+  text-align: center;
 }
 
 header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 header svg {
-    width: 1.5em;
-    cursor: pointer;
+  width: 1.5em;
+  cursor: pointer;
 }
 
 a {
-    color: white;
+  color: white;
 }
 
-
 ul {
-    list-style: none;
-    padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 a.logo {
-    font-weight: bold;
-    margin: 0 1em;
+  font-weight: bold;
+  margin: 0 1em;
 }
 
 a.cta-btn {
-    margin-left: auto;
-    background: #FC85AE;
-    padding: 1em;
-    display: inline-block;
-    border-radius: 2em;
-    font-size: .6em;
-    color: #303A52;
-    font-weight: bold;
+  margin-left: auto;
+  background: #fc85ae;
+  padding: 1em;
+  display: inline-block;
+  border-radius: 2em;
+  font-size: 0.6em;
+  color: #303a52;
+  font-weight: bold;
 }
 
 /* Navigation */
 
-
 nav {
-    position: fixed;
-    background: #576483;
-    height: 100vh;
-    left: 0;
-    top: 0;
-    width: 80%;
-    visibility: hidden;
-    transform: translateX(-50%);
-    opacity: 0;
-    transition: all .3s;
-    text-align: center;
+  position: fixed;
+  background: #576483;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  width: 80%;
+  visibility: hidden;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: all 0.3s;
+  text-align: center;
 }
 
-
 nav p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 nav svg {
-    cursor: pointer;
-    width: 1em;
+  cursor: pointer;
+  width: 1em;
 }
 
 nav ul li a {
-    display: block;
-    padding: .2em;
-    font-size: 1.8em;
+  display: block;
+  padding: 0.2em;
+  font-size: 1.8em;
 }
 
 .selected {
-    background: #9E579D;
+  background: #9e579d;
 }
 
 .open-nav {
-    visibility: unset;
-    opacity: 1;
-    transform: translateX(0);
+  visibility: unset;
+  opacity: 1;
+  transform: translateX(0);
 }
-
 
 /* Main Section */
 
-
 h1 {
-    color: white;
-    margin-top: 1em;
+  color: white;
+  margin-top: 1em;
 }
 
 .panel {
-    background: #39445F;
-    border-radius: .3em;
+  background: #39445f;
+  border-radius: 0.3em;
 }
 
 h3 {
-    color: #FC85AE;
-    margin: 0;
-    font-size: 2em;
+  color: #fc85ae;
+  margin: 0;
+  font-size: 2em;
 }
 
 ul.data li p {
-    color: white;
-    font-weight: bold;
-    font-size: 1.8em;
-    margin: .3em 0 1em;
+  color: white;
+  font-weight: bold;
+  font-size: 1.8em;
+  margin: 0.3em 0 1em;
 }
 
 ul.data li:last-child p {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 ul.secondary {
-    margin-top: 2em;
+  margin-top: 2em;
 }
 ul.secondary li p {
-    font-size: 1.3em;
+  font-size: 1.3em;
 }
 
 main {
-    border: 1px solid white;
+  border: 1px solid white;
 }
-
 
 /* Your Fixes Below */
 
 body {
-    background: #303A52;
-    font-family: 'Nunito', sans-serif;
+  background: #303a52;
+  font-family: "Nunito", sans-serif;
 }
 
 nav {
-    background: #2C354A;
+  background: #2c354a;
 }
 
 main {
-   border: unset;
-} 
+  border: unset;
+}
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 p {
-    line-height: 1.4em;
+  line-height: 1.4em;
 }
 
 a.cta-btn {
-    font-size: .9em;
-    padding: .2em .4em;
-    border-radius: .2em;
+  font-size: 0.9em;
+  padding: 0.2em 0.4em;
+  border-radius: 0.2em;
 }
 
 nav ul li a {
-    font-size: 1.2em;
-    padding: .8em 1em;
+  font-size: 1.2em;
+  padding: 0.8em 1em;
 }
 
 h3 {
-    font-size: unset;
+  font-size: unset;
 }
 
 nav {
-    text-align: left;
+  text-align: left;
 }
 
 .inner-wrapper {
-    padding: 1em;
+  padding: 1em;
 }
 .panel {
-    padding: .5em 1em;
-    margin-bottom: 2em;
+  padding: 0.5em 1em;
+  margin-bottom: 2em;
 }
 
 .secondary {
-    max-width: 400px;
-    margin: 0 auto;
-    padding-top: 2em;
+  max-width: 400px;
+  margin: 0 auto;
+  padding-top: 2em;
 }
-
 
 /* Large Phones */
 
 @media (min-width: 400px) {
-    ul.data {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 0 4em;
-        justify-content: center;
-    }
+  ul.data {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0 4em;
+    justify-content: center;
+  }
 }
 
 @media (min-width: 850px) {
-    
-    .panel, .columns {
-        max-width: 400px;
-        margin: 3em auto;
-    }
-    
-    header svg {
-        display: none;
-    }
-    
-    nav {
-        display: flex;
-        flex-direction: row;
-        background: #576483;
-        height: 10vh; 
-        text-align: center;
-        visibility: unset;
-        opacity: 1;
-        transform: translateX(0);
-    }
-    
-    body {
-        padding-top: 4em;
-    }
-    
-    #nav {
-        margin-left: 4em;
-        display:flex;
-    background: #303A52;
-        
-    }
-    nav ul {
-        margin-left: 4em;
-        display: flex;
-        flex-basis: start;
-        align-items: start;
-        background: #303A52;     
-    }
-    
-    nav .inner-wrapper {
-        display: none;
-    }
-    
-    header a {
-        visibility: hidden;
-    }
-    
- 
+  h1 {
+    font-size: 3.5em;
+  }
+
+  .panel,
+  .columns {
+    max-width: 400px;
+    margin: 3em auto;
+  }
+
+  header svg {
+    display: none;
+  }
+
+  nav {
+    position: fixed;
+    justify-content: space-around;
+    height: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background: #576483;
+    min-height: 30px;
+    text-align: center;
+    visibility: unset;
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  body {
+    padding-top: 4em;
+  }
+
+  #nav {
+    margin-left: 4em;
+    display: flex;
+    background: #303a52;
+  }
+  nav ul {
+    margin-left: 4em;
+    display: flex;
+    flex-basis: start;
+    align-items: start;
+    background: #303a52;
+  }
+
+  nav .inner-wrapper {
+    display: none;
+  }
+
+  header a {
+    visibility: hidden;
+  }
 }
 
-
- /*
+/*
 
 - White Space
 - Color 
@@ -271,18 +269,16 @@ nav {
 
 */
 
-
-
 /* Ignore this -- for displaying the viewport width */
 .width-container {
-    display: none;
+  display: none;
 }
 .display-width {
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-color: #E6E6E6;
-    padding: .3em;
-    font-size: .85em;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: #e6e6e6;
+  padding: 0.3em;
+  font-size: 0.85em;
 }
